<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UplActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/audio_name"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:id="@+id/songTitle"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textinput"
                android:textColorHint="#616161"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_marginTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                android:text="@string/upload_song"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/btn_audio"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_file_selected"
                android:gravity="center"
                android:layout_marginStart="14dp"
                android:textColor="@color/black"
                android:id="@+id/textviewSongFileSelected"
                />
        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/progressBar"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            android:text="@string/upload"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btn_upl"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            android:text="Show songs"
            android:onClick="openSongsActivity"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />


    </LinearLayout>


</LinearLayout>