<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <ImageView
        android:id="@+id/thew"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/the"
        android:src="@drawable/thew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/container1"
        style="@style/ContainerComponents"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thew"
        app:layout_constraintVertical_bias="0.359" />

    <EditText
        android:id="@+id/email"
        style="@style/Edit_Text"
        android:layout_width="205dp"
        android:layout_height="62dp"
        android:layout_margin="15dp"
        android:layout_marginStart="71dp"
        android:autofillHints=""
        android:backgroundTint="#5E5353"
        android:drawableEnd="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="@+id/container1"
        app:layout_constraintStart_toStartOf="@+id/container1"
        app:layout_constraintTop_toTopOf="@id/container1"
        />

    <EditText
        android:id="@+id/senha"
        style="@style/Edit_Text"
        android:layout_width="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="71dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_eye"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/container1"
        app:layout_constraintEnd_toEndOf="@+id/container1"
        app:layout_constraintStart_toStartOf="@+id/container1"
        app:layout_constraintTop_toTopOf="@id/container1" />

    <Button
        android:id="@+id/entrar"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="@+id/container1"
        app:layout_constraintEnd_toEndOf="@+id/container1"
        app:layout_constraintStart_toStartOf="@+id/container1"
        app:layout_constraintTop_toTopOf="@id/senha" />


    <TextView
        android:id="@+id/criar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crie_uma_conta_clicando_aqui"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container1" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/container1"
        app:layout_constraintEnd_toEndOf="@+id/container1"
        app:layout_constraintStart_toStartOf="@+id/container1"
        app:layout_constraintTop_toBottomOf="@+id/entrar" />


</androidx.constraintlayout.widget.ConstraintLayout>