<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/the_way"
            android:gravity="center"
            android:textSize="40sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/to_register"
            android:gravity="center"
            android:textSize="20dp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <View
                android:id="@+id/container1"
                style="@style/ContainerComponents"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.825" />



            <EditText
                android:id="@+id/email"
                style="@style/Edit_Text"
                android:layout_width="205dp"
                android:layout_height="62dp"
                android:layout_margin="15dp"
                android:layout_marginStart="71dp"
                android:layout_marginTop="120dp"
                android:autofillHints=""
                android:backgroundTint="#5E5353"
                android:drawableEnd="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="20dp"
                app:layout_constraintBottom_toTopOf="@+id/senha"
                app:layout_constraintEnd_toEndOf="@+id/container1"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="@+id/container1"
                app:layout_constraintTop_toTopOf="@id/container1"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/senha"
                style="@style/Edit_Text"
                android:layout_width="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="71dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/ic_eye"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="numberPassword"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/cadastrar"
                app:layout_constraintEnd_toEndOf="@+id/container1"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="@+id/container1"
                app:layout_constraintTop_toTopOf="@id/container1"
                app:layout_constraintVertical_bias="0.868" />

            <Button
                android:id="@+id/cadastrar"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="cadastrar"
                app:layout_constraintBottom_toBottomOf="@+id/container1"
                app:layout_constraintEnd_toEndOf="@+id/container1"
                app:layout_constraintStart_toStartOf="@+id/container1" />

            <EditText
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="Name"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="@+id/container1"
                app:layout_constraintStart_toStartOf="@+id/container1"
                app:layout_constraintTop_toTopOf="@+id/container1" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>





</LinearLayout>